# raisa-normalizer

./: .env.example  .gitignore  README.md  _MConverter.eu_test_retrieval.md  _MConverter.eu_test_thesis.md  test_retrievalddd.md
.sisyphus/: boulder.json
.sisyphus/notepads/voice-assistant-thesis/: learnings.md
.sisyphus/plans/: voice-assistant-thesis.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/providers/: __init__.py  base.py  schemas.py  timing.py
backend/app/providers/normalizer/: __init__.py  alpaca.py  vllm.py
backend/app/providers/retrieval/: __init__.py  embedding.py  retriever.py
backend/app/providers/selection_verbalizer/: __init__.py  alpaca.py  openai.py
backend/app/providers/stt/: __init__.py  openai.py
backend/app/providers/tts/: __init__.py  openai.py  supertonic.py
backend/app/routers/: __init__.py  admin.py  health.py  pipeline.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/: AdminCSVImport.tsx  AdminPanel.tsx  AdminQAForm.tsx  AnswerBlock.tsx  AudioRecorder.tsx  AudioTtsPanel.tsx  ErrorPanel.tsx  LLMSelection.tsx  LatencyTimeline.tsx  MicButton.tsx  PipelineConsole.tsx  PipelineStage.tsx  PipelineTimeline.tsx  RaisaHeader.tsx  RecordControls.tsx  RetrievalCandidates.tsx  SectionCard.tsx  TimelineStage.tsx  TranscriptBlock.tsx  TranscriptPanel.tsx  VoicePanel.tsx  types.ts
frontend/hooks/: useAudioRecorder.ts  usePipelineStream.ts
